changed PointerLM to link

--- a/content/dynamic/html/chat.html
+++ b/content/dynamic/html/chat.html
@@ -16,15 +16,17 @@
         <!-- Header -->
         <header class="app-header">
             <div class="top-header">
-                <h1>PointerLM</h1>
+                <a href="../../../index.html" class="title">PointerLM</a>
 
-                <div class="not-loggedin">
-                    <a href="../../dynamic/html/signup.html" class="btn btn-rounded btn-sign-in">Sign up</a>
-                    <a href="../../dynamic/html/login.html" class="btn btn-rounded btn-log-in">Log in</a>
-                </div>
+                <div class="not-title">
+                    <div class="not-loggedin">
+                        <a href="../../dynamic/html/signup.html" class="btn btn-rounded btn-sign-in">Sign up</a>
+                        <a href="../../dynamic/html/login.html" class="btn btn-rounded btn-log-in">Log in</a>
+                    </div>
 
-                <div class="loggedin">
-                    <a href="#" class="btn btn-rounded btn-account">Account Data</a>
+                    <div class="loggedin">
+                        <a href="#" class="btn btn-rounded btn-account">Account Data</a>
+                    </div>
                 </div>
             </div>
 
